# RH-Matching-Backend

./: .env  .gitignore  .travis.yml  Cargo.toml  README.md  app.js  package.json  rh-matching-backend.service
database/: db.js
model/: besoin.js  candidat.js  dashboard.js
routes/: besoin.route.js  candidat.route.js  dashboard.routes.js
src/: db.rs  error.rs  handler.rs  main.rs
src/handlers/: candidate.rs  mod.rs  need.rs
src/schemas/: candidate.rs  mod.rs
